About Us Section

--- a/app/index.html
+++ b/app/index.html
@@ -26,10 +26,109 @@
 </head>
 
 <body>
-	<h1>Hello world</h1>
-	<i class="fas fa-phone"></i>
-	
-
+	<header class="header">
+		<section class="contacts">
+			<div class="container">
+				<ul class="contacts__list">
+					<li class="contacts__item">
+						<a href="tel:6337 0128" class="contacts__link">
+							<i class="fas fa-mobile-alt contacts__icon"></i>
+							6337 0128
+						</a>					
+					</li>
+					<li class="contacts__item">
+						<a href="mailto:info@business.co" class="contacts__link">
+							<i class="fas fa-envelope contacts__icon"></i>
+							info@business.co
+						</a>					
+					</li>
+					<li class="contacts__item">
+						<a href="mailto:info@business.co" class="contacts__link">
+							<div class="contacts__facebook">
+								<i class="fab fa-facebook-f contacts__social"></i>
+							</div>
+						</a>					
+					</li>			
+				</ul>
+			</div>
+		</section>
+		<nav class="nav">
+			<div class="container">
+				<div class="nav__wrapper">
+					<div class="nav__logo">
+						<a href="#" class="nav__logo-link">
+							<i class="fas fa-graduation-cap nav__logo-icon"></i>
+							<div class="nav__logo-name">
+								<span class="nav__name">Business</span>
+								<span class="nav__description">Tagline goes here</span>
+							</div>
+						</a>
+					</div>
+					<ul class="nav__list">
+						<li class="nav__item">
+							<a href="#" class="nav__link">Home</a>
+						</li>
+						<li class="nav__item">
+							<a href="#" class="nav__link">About Us</a>
+						</li>
+						<li class="nav__item">
+							<a href="#" class="nav__link">Our Approach</a>
+						</li>
+						<li class="nav__item">
+							<a href="#" class="nav__link">Our Work</a>
+						</li>
+						<a href="#" class="btn btn--header">Free Consultation</a>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
+	<main class="main">
+		<section class="hero">
+			<div class="container">
+				<div class="hero__content">
+					<h1 class="hero__heading">
+						<span class="hero__heading hero__heading--sm">We Providing</span>
+						<span class="hero__heading hero__heading--bg">Social Media marketing for businesses</span>
+					</h1>
+					<a href="#" class="btn btn--hero">Free Consultation</a>
+				</div>
+			</div>
+		</section>
+	</main>
+	<section class="aboutus">
+		<div class="container">
+			<div class="heading">
+				<h2 class="heading__main">About Us</h2>
+				<p class="heading__description">We are added our major Services</p>
+			</div>
+			<ul class="aboutus__list">
+				<li class="aboutus__item">
+					<div class="aboutus__icon aboutus__icon--1"></div>
+					<h3 class="aboutus__heading">Facebook Marketing</h3>
+					<p class="aboutus__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+				</li>
+				<li class="aboutus__item">
+					<div class="aboutus__icon aboutus__icon--2"></div>
+					<h3 class="aboutus__heading">Landing pages Creation</h3>
+					<p class="aboutus__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+				</li>
+				<li class="aboutus__item">
+					<div class="aboutus__icon aboutus__icon--3"></div>
+					<h3 class="aboutus__heading">Ads Management</h3>
+					<p class="aboutus__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+				</li>
+			</ul>
+		</div>
+	</section>
+	<section class="approach">
+		<div class="container">
+			<div class="heading">
+				<h2 class="heading__main">Our Approach</h2>
+				<p class="heading__description">Check Our Approaches step by step (how we do it)</p>
+			</div>
+		</div>
+	</section>
 	
 
 </body>
