--- a/app/index.html
+++ b/app/index.html
@@ -127,6 +127,48 @@
 				<h2 class="heading__main">Our Approach</h2>
 				<p class="heading__description">Check Our Approaches step by step (how we do it)</p>
 			</div>
+			<ul class="approach__list">
+				<li class="approach__item">
+					<div class="approach__img-box">
+						<img src="img/step-1.jpg" alt="step one" class="approach__img">
+						<div class="approach__step">step</div>
+					</div>
+					<div class="approach__content">
+						<h4 class="approach__heading">Step 1: Heading Here</h4>
+						<p class="approach__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+					</div>
+				</li>
+				<li class="approach__item">
+					<div class="approach__img-box">
+						<img src="img/step-2.jpg" alt="step two" class="approach__img">
+						<div class="approach__step">step</div>
+					</div>
+					<div class="approach__content">
+						<h4 class="approach__heading">Step 2: Heading Here</h4>
+						<p class="approach__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+					</div>
+				</li>
+				<li class="approach__item">
+					<div class="approach__img-box">
+						<img src="img/step-3.jpg" alt="step three" class="approach__img">
+						<div class="approach__step">step</div>
+					</div>
+					<div class="approach__content">
+						<h4 class="approach__heading">Step 3: Heading Here</h4>
+						<p class="approach__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+					</div>
+				</li>
+				<li class="approach__item">
+					<div class="approach__img-box">
+						<img src="img/step-4.jpg" alt="step four" class="approach__img">
+						<div class="approach__step">step</div>
+					</div>
+					<div class="approach__content">
+						<h4 class="approach__heading">Step 4: Heading Here</h4>
+						<p class="approach__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+					</div>
+				</li>
+			</ul>
 		</div>
 	</section>
 	
