Work Section added

--- a/app/index.html
+++ b/app/index.html
@@ -171,7 +171,56 @@
 			</ul>
 		</div>
 	</section>
-	
+	<section class="work">
+		<div class="container">
+			<div class="heading heading--work">
+				<h2 class="heading__main heading__main--work">Our Work</h2>
+				<p class="heading__description heading__description--work">We are added our featured works below</p>
+			</div>
+			<ul class="work__list">
+				<li class="work__item">
+					<div class="work__content">
+						<div class="work__icon"></div>
+						<h4 class="work__heading">Project Name</h4>
+						<span class="work__text">Facebook marketing</span>
+					</div>
+					<div class="work__img-box">
+						<img src="img/work-1.jpg" alt="work one" class="work__img">
+					</div>
+				</li>
+				<li class="work__item">
+					<div class="work__content">
+						<div class="work__icon"></div>
+						<h4 class="work__heading">Project Name</h4>
+						<span class="work__text">Landing Page</span>
+					</div>
+					<div class="work__img-box">
+						<img src="img/work-2.jpg" alt="work two" class="work__img">
+					</div>
+				</li>
+				<li class="work__item">
+					<div class="work__content">
+						<div class="work__icon"></div>
+						<h4 class="work__heading">Project Name</h4>
+						<span class="work__text">Facebook marketing</span>
+					</div>
+					<div class="work__img-box">
+						<img src="img/work-3.jpg" alt="work three" class="work__img">
+					</div>
+				</li>
+				<li class="work__item">
+					<div class="work__content">
+						<div class="work__icon"></div>
+						<h4 class="work__heading">Project Name</h4>
+						<span class="work__text">Landing Page</span>
+					</div>
+					<div class="work__img-box">
+						<img src="img/work-4.jpg" alt="work four" class="work__img">
+					</div>
+				</li>
+			</ul>
+		</div>
+	</section>
 
 </body>
 </html>
