CTA Section + Form added

--- a/app/index.html
+++ b/app/index.html
@@ -221,6 +221,33 @@
 			</ul>
 		</div>
 	</section>
+	<section class="cta">
+		<div class="container">
+			<div class="heading heading--cta">
+				<h2 class="heading__main heading__main--cta">Get Your Free Facebook Analysis Now</h2>
+				<p class="heading__description heading__description--cta">Enter your details below</p>
+			</div>
+			<div class="btn-down">
+				<a href="form.html" target="_blank" class="arrow-down">
+					<i class="fas fa-angle-down"></i>
+				</a>
+			</div>
+			<div class="form-container">
+				<form action="POST" action="#" class="form">
+					<h4 class="form__header">
+						Sit down with our experts to receive a free customized marketing plan for your business + Learn How To Use Google and Facebook to get 5000% ROI or more
+					</h4>
+					<div class="form__group">
+						<input type="text" placeholder="Your Name" class="form__input">
+						<input type="tel" placeholder="Contact Number" class="form__input">
+						<input type="email" placeholder="Company Name" class="form__input">
+					</div>
+					<button type="submit" class="btn btn--form">Submit Now</button>
+					<button class="form__close">X</button>
+				</form>
+			</div>
+		</div>
+	</section>
 
 </body>
 </html>
