--- a/app/index.html
+++ b/app/index.html
@@ -95,159 +95,201 @@
 				</div>
 			</div>
 		</section>
+		<section class="aboutus">
+			<div class="container">
+				<div class="heading">
+					<h2 class="heading__main">About Us</h2>
+					<p class="heading__description">We are added our major Services</p>
+				</div>
+				<ul class="aboutus__list">
+					<li class="aboutus__item">
+						<div class="aboutus__icon aboutus__icon--1"></div>
+						<h3 class="aboutus__heading">Facebook Marketing</h3>
+						<p class="aboutus__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+					</li>
+					<li class="aboutus__item">
+						<div class="aboutus__icon aboutus__icon--2"></div>
+						<h3 class="aboutus__heading">Landing pages Creation</h3>
+						<p class="aboutus__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+					</li>
+					<li class="aboutus__item">
+						<div class="aboutus__icon aboutus__icon--3"></div>
+						<h3 class="aboutus__heading">Ads Management</h3>
+						<p class="aboutus__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+					</li>
+				</ul>
+			</div>
+		</section>
+		<section class="approach">
+			<div class="container">
+				<div class="heading">
+					<h2 class="heading__main">Our Approach</h2>
+					<p class="heading__description">Check Our Approaches step by step (how we do it)</p>
+				</div>
+				<ul class="approach__list">
+					<li class="approach__item">
+						<div class="approach__img-box">
+							<img src="img/step-1.jpg" alt="step one" class="approach__img">
+							<div class="approach__step">step</div>
+						</div>
+						<div class="approach__content">
+							<h4 class="approach__heading">Step 1: Heading Here</h4>
+							<p class="approach__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+						</div>
+					</li>
+					<li class="approach__item">
+						<div class="approach__img-box">
+							<img src="img/step-2.jpg" alt="step two" class="approach__img">
+							<div class="approach__step">step</div>
+						</div>
+						<div class="approach__content">
+							<h4 class="approach__heading">Step 2: Heading Here</h4>
+							<p class="approach__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+						</div>
+					</li>
+					<li class="approach__item">
+						<div class="approach__img-box">
+							<img src="img/step-3.jpg" alt="step three" class="approach__img">
+							<div class="approach__step">step</div>
+						</div>
+						<div class="approach__content">
+							<h4 class="approach__heading">Step 3: Heading Here</h4>
+							<p class="approach__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+						</div>
+					</li>
+					<li class="approach__item">
+						<div class="approach__img-box">
+							<img src="img/step-4.jpg" alt="step four" class="approach__img">
+							<div class="approach__step">step</div>
+						</div>
+						<div class="approach__content">
+							<h4 class="approach__heading">Step 4: Heading Here</h4>
+							<p class="approach__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</section>
+		<section class="work">
+			<div class="container">
+				<div class="heading heading--work">
+					<h2 class="heading__main heading__main--work">Our Work</h2>
+					<p class="heading__description heading__description--work">We are added our featured works below</p>
+				</div>
+				<ul class="work__list">
+					<li class="work__item">
+						<div class="work__content">
+							<div class="work__icon"></div>
+							<h4 class="work__heading">Project Name</h4>
+							<span class="work__text">Facebook marketing</span>
+						</div>
+						<div class="work__img-box">
+							<img src="img/work-3.jpg" alt="work one" class="work__img">
+						</div>
+					</li>
+					<li class="work__item">
+						<div class="work__content">
+							<div class="work__icon"></div>
+							<h4 class="work__heading">Project Name</h4>
+							<span class="work__text">Landing Page</span>
+						</div>
+						<div class="work__img-box">
+							<img src="img/work-1.jpg" alt="work two" class="work__img">
+						</div>
+					</li>
+					<li class="work__item">
+						<div class="work__content">
+							<div class="work__icon"></div>
+							<h4 class="work__heading">Project Name</h4>
+							<span class="work__text">Facebook marketing</span>
+						</div>
+						<div class="work__img-box">
+							<img src="img/work-4.jpg" alt="work three" class="work__img">
+						</div>
+					</li>
+					<li class="work__item">
+						<div class="work__content">
+							<div class="work__icon"></div>
+							<h4 class="work__heading">Project Name</h4>
+							<span class="work__text">Landing Page</span>
+						</div>
+						<div class="work__img-box">
+							<img src="img/work-2.jpg" alt="work four" class="work__img">
+						</div>
+					</li>
+				</ul>
+			</div>
+		</section>
+		<section class="cta">
+			<div class="container">
+				<div class="heading heading--cta">
+					<h2 class="heading__main heading__main--cta">Get Your Free Facebook Analysis Now</h2>
+					<p class="heading__description heading__description--cta">Enter your details below</p>
+				</div>
+				<div class="btn-down">
+					<a href="form.html" target="_blank" class="arrow-down">
+						<i class="fas fa-angle-down"></i>
+					</a>
+				</div>
+				<div class="form-container">
+					<form method="POST" action="#" class="form">
+						<h4 class="form__header">
+							Sit down with our experts to receive a free customized marketing plan for your business + Learn How To Use Google and Facebook to get 5000% ROI or more
+						</h4>
+						<div class="form__group">
+							<input type="text" placeholder="Your Name" class="form__input">
+							<input type="tel" placeholder="Contact Number" class="form__input">
+							<input type="email" placeholder="Company Name" class="form__input">
+						</div>
+						<button type="submit" class="btn btn--form">Submit Now</button>
+						<button class="form__close">X</button>
+					</form>
+				</div>
+			</div>
+		</section>
 	</main>
-	<section class="aboutus">
+	<footer class="footer">
 		<div class="container">
-			<div class="heading">
-				<h2 class="heading__main">About Us</h2>
-				<p class="heading__description">We are added our major Services</p>
-			</div>
-			<ul class="aboutus__list">
-				<li class="aboutus__item">
-					<div class="aboutus__icon aboutus__icon--1"></div>
-					<h3 class="aboutus__heading">Facebook Marketing</h3>
-					<p class="aboutus__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
-				</li>
-				<li class="aboutus__item">
-					<div class="aboutus__icon aboutus__icon--2"></div>
-					<h3 class="aboutus__heading">Landing pages Creation</h3>
-					<p class="aboutus__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
-				</li>
-				<li class="aboutus__item">
-					<div class="aboutus__icon aboutus__icon--3"></div>
-					<h3 class="aboutus__heading">Ads Management</h3>
-					<p class="aboutus__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
-				</li>
-			</ul>
-		</div>
-	</section>
-	<section class="approach">
-		<div class="container">
-			<div class="heading">
-				<h2 class="heading__main">Our Approach</h2>
-				<p class="heading__description">Check Our Approaches step by step (how we do it)</p>
-			</div>
-			<ul class="approach__list">
-				<li class="approach__item">
-					<div class="approach__img-box">
-						<img src="img/step-1.jpg" alt="step one" class="approach__img">
-						<div class="approach__step">step</div>
-					</div>
-					<div class="approach__content">
-						<h4 class="approach__heading">Step 1: Heading Here</h4>
-						<p class="approach__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
-					</div>
-				</li>
-				<li class="approach__item">
-					<div class="approach__img-box">
-						<img src="img/step-2.jpg" alt="step two" class="approach__img">
-						<div class="approach__step">step</div>
-					</div>
-					<div class="approach__content">
-						<h4 class="approach__heading">Step 2: Heading Here</h4>
-						<p class="approach__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
-					</div>
-				</li>
-				<li class="approach__item">
-					<div class="approach__img-box">
-						<img src="img/step-3.jpg" alt="step three" class="approach__img">
-						<div class="approach__step">step</div>
-					</div>
-					<div class="approach__content">
-						<h4 class="approach__heading">Step 3: Heading Here</h4>
-						<p class="approach__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
-					</div>
-				</li>
-				<li class="approach__item">
-					<div class="approach__img-box">
-						<img src="img/step-4.jpg" alt="step four" class="approach__img">
-						<div class="approach__step">step</div>
-					</div>
-					<div class="approach__content">
-						<h4 class="approach__heading">Step 4: Heading Here</h4>
-						<p class="approach__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
-					</div>
-				</li>
-			</ul>
-		</div>
-	</section>
-	<section class="work">
-		<div class="container">
-			<div class="heading heading--work">
-				<h2 class="heading__main heading__main--work">Our Work</h2>
-				<p class="heading__description heading__description--work">We are added our featured works below</p>
-			</div>
-			<ul class="work__list">
-				<li class="work__item">
-					<div class="work__content">
-						<div class="work__icon"></div>
-						<h4 class="work__heading">Project Name</h4>
-						<span class="work__text">Facebook marketing</span>
-					</div>
-					<div class="work__img-box">
-						<img src="img/work-1.jpg" alt="work one" class="work__img">
-					</div>
-				</li>
-				<li class="work__item">
-					<div class="work__content">
-						<div class="work__icon"></div>
-						<h4 class="work__heading">Project Name</h4>
-						<span class="work__text">Landing Page</span>
-					</div>
-					<div class="work__img-box">
-						<img src="img/work-2.jpg" alt="work two" class="work__img">
-					</div>
-				</li>
-				<li class="work__item">
-					<div class="work__content">
-						<div class="work__icon"></div>
-						<h4 class="work__heading">Project Name</h4>
-						<span class="work__text">Facebook marketing</span>
-					</div>
-					<div class="work__img-box">
-						<img src="img/work-3.jpg" alt="work three" class="work__img">
-					</div>
-				</li>
-				<li class="work__item">
-					<div class="work__content">
-						<div class="work__icon"></div>
-						<h4 class="work__heading">Project Name</h4>
-						<span class="work__text">Landing Page</span>
-					</div>
-					<div class="work__img-box">
-						<img src="img/work-4.jpg" alt="work four" class="work__img">
-					</div>
-				</li>
-			</ul>
-		</div>
-	</section>
-	<section class="cta">
-		<div class="container">
-			<div class="heading heading--cta">
-				<h2 class="heading__main heading__main--cta">Get Your Free Facebook Analysis Now</h2>
-				<p class="heading__description heading__description--cta">Enter your details below</p>
-			</div>
-			<div class="btn-down">
-				<a href="form.html" target="_blank" class="arrow-down">
-					<i class="fas fa-angle-down"></i>
-				</a>
-			</div>
-			<div class="form-container">
-				<form action="POST" action="#" class="form">
-					<h4 class="form__header">
-						Sit down with our experts to receive a free customized marketing plan for your business + Learn How To Use Google and Facebook to get 5000% ROI or more
-					</h4>
-					<div class="form__group">
-						<input type="text" placeholder="Your Name" class="form__input">
-						<input type="tel" placeholder="Contact Number" class="form__input">
-						<input type="email" placeholder="Company Name" class="form__input">
-					</div>
-					<button type="submit" class="btn btn--form">Submit Now</button>
-					<button class="form__close">X</button>
-				</form>
+			<div class="footer__main">
+				<div class="heading heading--cta">
+					<h2 class="heading__main heading__main--work">Get in touch</h2>
+				</div>
+				<ul class="footer__socials">
+					<li class="footer__item">
+						<a href="#" class="footer__link">
+							<i class="fab fa-facebook-f"></i>
+						</a>
+					</li>
+					<li class="footer__item">
+						<a href="#" class="footer__link">
+							<i class="fab fa-twitter"></i>
+						</a>
+					</li>
+					<li class="footer__item">
+						<a href="#" class="footer__link">
+							<i class="fab fa-google-plus-g"></i>
+						</a>
+					</li>
+					<li class="footer__item">
+						<a href="#" class="footer__link">
+							<i class="fab fa-instagram"></i>
+						</a>
+					</li>
+				</ul>
+				<div class="footer__subscribe">
+					<div class="footer__cta">Subscribe to our newsletter to stay update with what is new</div>
+					<form method="POST" action="#">
+						<div class="footer__field">
+							<input type="email" placeholder="Email Address" class="footer__input">
+						</div>
+						<button type="submit" class="btn--footer">Subscribe</button>
+					</form>
+				</div>
 			</div>
 		</div>
-	</section>
-
+		<div class="footer__copyright">
+			Cssauthor.com © 2014 All Rights Reserved
+		</div>
+	</footer>
 </body>
 </html>
